opam-version: "1.2"
name: "consensus"
version: "0.0.0"
maintainer: "Arto Bendiken <arto@bendiken.net>"
authors: ["Arto Bendiken <arto@bendiken.net>"
          "Mike Gogulski <mike@gogulski.com>"]
homepage: "http://conreality.org"
bug-reports: "https://github.com/conreality/consensus/issues"
license: "Public Domain"
tags: "org:conreality"
dev-repo: "https://github.com/conreality/consensus.git"
build: [make]
remove: ["ocamlfind" "remove" "consensus"]
depends: [
  "ocamlfind" {build}
  "ctypes.foreign"
]
depexts: [
  [["homebrew"]  ["libffi"]]
  [["macports"]  ["libffi" "opencv"]]
  [["debian"]    ["libffi-dev" "libopencv-core-dev"]]
  [["ubuntu"]    ["libffi-dev" "libopencv-core-dev"]]
  [["centos"]    ["libffi-devel"]]
  [["fedora"]    [""]]
  [["archlinux"] [""]]
  [["gentoo"]    [""]]
  [["openbsd"]   [""]]
]
available: [ocaml-version >= "4.02.1"]
post-messages: [
  "This software requires libffi (>= 3.0.13) and OpenCV (>= 2.4)." {failure}
]
