opam-version: "1.2"
name: "consensus"
version: "0.0.0"
maintainer: "Arto Bendiken <arto@bendiken.net>"
authors: ["Arto Bendiken <arto@bendiken.net>"
          "Mike Gogulski <mike@gogulski.com>"]
homepage: "http://conreality.org"
bug-reports: "http://bugs.conreality.org"
license: "Public Domain"
tags: "org:conreality"
dev-repo: "https://github.com/conreality/conreality.git"
build: [make]
build-test: [make check]
remove: ["ocamlfind" "remove" "consensus"]
depends: [
  "ocamlbuild"     {build}
  "ocamlfind"      {build}
  "alcotest"       {test  & >= "0.4.5"}    # https://opam.ocaml.org/packages/alcotest/alcotest.0.4.5/
  "cmdliner"       {build & >= "0.9.8"}    # https://opam.ocaml.org/packages/cmdliner/cmdliner.0.9.8/
  "cppo"           {build & >= "1.3.1"}    # https://opam.ocaml.org/packages/cppo/cppo.1.3.1/
  "ctypes"         {build & >= "0.4.0"}    # https://opam.ocaml.org/packages/ctypes/ctypes.0.4.0/
  "ctypes-foreign" {build & >= "0.4.0"}    # https://opam.ocaml.org/packages/ctypes-foreign/ctypes-foreign.0.4.0/
  "irc-client"     {build & >= "0.3.0"}    # https://opam.ocaml.org/packages/irc-client/irc-client.0.3.0/
  "lwt"            {build & >= "2.5.0"}    # https://opam.ocaml.org/packages/lwt/lwt.2.5.0/
  "menhir"         {build & >= "20151112"} # https://opam.ocaml.org/packages/menhir/menhir.20151112/
  "ocaml-lua"      {build & >= "1.2"}      # https://opam.ocaml.org/packages/ocaml-lua/ocaml-lua.1.2/
]
depexts: [
  [["debian"]      ["libffi-dev"   (*3.1.0 *) "libopencv-dev" (*2.4.9 *)]] # Debian Jessie
  [["ubuntu"]      ["libffi-dev"   (*3.0.13*) "libopencv-dev" (*2.4.8 *)]] # Ubuntu 14.04 LTS
  [["centos"]      ["libffi-devel" (*3.0.13*) "opencv-devel"  (*2.4.5 *)]] # CentOS 7
  [["fedora"]      ["libffi-devel" (*3.1.0 *) "opencv-devel"  (*2.4.11*)]] # Fedora 23
  [["archlinux"]   ["libffi"       (*3.2.1 *) "opencv"        (*2.4.12*)]] # Arch Linux x86_64
  [["gentoo"]      ["libffi"       (*3.0.13*) "opencv"        (*2.4.9 *)]] # Gentoo amd64
  [["openbsd"]     ["libffi"       (*3.2.1 *) "opencv"        (*2.4.10*)]] # OpenBSD 5.8
  [["freebsd"]     ["libffi"       (*3.2.1 *) "opencv"        (*2.4.9 *)]] # FreeBSD 10.2
  [["macports"]    ["libffi"       (*3.2.1 *) "opencv"        (*3.0.0 *)]] # OS X MacPorts
  [["homebrew"]    ["libffi"       (*3.0.13*) "opencv"        (*2.4.12*)]] # OS X Homebrew
]
available: [ocaml-version >= "4.02.1"]
post-messages: [
  "This software requires libffi-dev (>= 3.0.13) and libopencv-dev (>= 2.4)."
    {failure & (os = "debian" | os = "ubuntu")}
  "This software requires libffi-devel (>= 3.0.13) and opencv-devel (>= 2.4)."
    {failure & (os = "centos" | os = "fedora")}
  "This software requires libffi (>= 3.0.13) and opencv (>= 2.4)."
    {failure & (os = "archlinux" | os = "gentoo")}
  "This software requires libffi (>= 3.0.13) and opencv (>= 2.4)."
    {failure & (os = "openbsd" | os = "freebsd")}
  "This software requires libffi (>= 3.0.13) and opencv (>= 2.4)."
    {failure & (os = "macports" | os = "homebrew")}
]
