EXTRA_DIST =                  \
  MANIFEST.in                 \
  README.rst                  \
  conreality/__init__.py      \
  conreality/ddk/__init__.py  \
  conreality/ddk/camera.py    \
  conreality/ddk/driver.py    \
  conreality/ddk/sysexits.py  \
  conreality/sdk/__init__.py  \
  conreality/sdk/geometry.py  \
  conreality/sdk/measures.py  \
  conreality/sdk/messaging.py \
  conreality/sdk/model.py     \
  conreality/sdk/scripting.py \
  conreality/sdk/video.py     \
  conreality/sdk/vision.py    \
  setup.cfg                   \
  setup.py
